--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <span class="loader"></span>
+    </div>
     <div class="page" id="page">
         <!-- Background -->
         <div class="background gradient">
@@ -46,6 +49,7 @@
                 <li></li>
             </ul>
         </div>
+
 
         <!-- Controler -->
 
@@ -623,6 +627,7 @@
 </script>
 
 <!-- script -->
+<script src="./js/loader.js"></script>
 <script src="./js/main.js"></script>
 
 
