--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
                         <span class="link">Work</span>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#blog-card">
                         <span class="icon">
                             <ion-icon name="chatbox-ellipses"></ion-icon>
                         </span>
                         <span class="link">Blog</span>
                     </a>
-                </li>
+                </li> -->
                 <li>
                     <a href="#contact-card">
                         <span class="icon">
@@ -171,14 +171,14 @@
                                 <span class="link">Work</span>
                             </a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#blog-card">
                                 <span class="icon">
                                     <ion-icon name="chatbox-ellipses"></ion-icon>
                                 </span>
                                 <span class="link">Blog</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="#contact-card">
                                 <span class="icon">
@@ -494,6 +494,7 @@
                                             <ul>
                                                 <li>HTML</li>
                                                 <li>CSS</li>
+                                                <li>JS</li>
                                             </ul>
                                         </div>
                                     </a>
@@ -501,17 +502,58 @@
 
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-                                    <a href="https://son-co.github.io/CVWeb/index.html" class="item">
+                                    <a href="https://son-co.github.io/dirtycoins_clone/indexx.html" class="item">
                                         <div class="item-content">
                                             <div class="img">
-                                                <img src="./img/pro1.png" alt="">
+                                                <img src="./img/dirtycoins.jpg" alt="">
                                             </div>
                                             <div class="name">
-                                                Portfolio Clone
+                                                Dirty Coins Clone
                                             </div>
                                             <ul>
                                                 <li>HTML</li>
                                                 <li>CSS</li>
+                                                <li>JS</li>
+                                            </ul>
+                                        </div>
+                                    </a>
+
+                                </div>
+                                <div class="clear"></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <a href="https://son-co.github.io/Music_template/index.html" class="item">
+                                        <div class="item-content">
+                                            <div class="img">
+                                                <img src="./img/mucsicweb.jpg" alt="">
+                                            </div>
+                                            <div class="name">
+                                                Music Tempalte
+                                            </div>
+                                            <ul>
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>JS</li>
+                                            </ul>
+                                        </div>
+                                    </a>
+
+
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <a href="https://son-co.github.io/Ivymoda_Clone/" class="item">
+                                        <div class="item-content">
+                                            <div class="img">
+                                                <img src="./img/ivy.jpg" alt="">
+                                            </div>
+                                            <div class="name">
+                                                IVY Moda Clone
+                                            </div>
+                                            <ul>
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>JS</li>
                                             </ul>
                                         </div>
                                     </a>
@@ -523,16 +565,16 @@
                     </div>
                 </div>
             </div>
-            <div class="card-inner hidden" id="blog-card">
+            <!-- <div class="card-inner hidden" id="blog-card">
                 <div class="card-wrap">
-                    <!-- Blog -->
+                 
                     <div class="content blog">
                         <div class="title">
                             <span class="first-word">Blog</span>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="card-inner hidden mg-bt" id="contact-card">
                 <div class="card-wrap">
                     <!-- contact -->
