--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="slide" style="background-image: url(./img/bg.jpg);"></div>
                     <!-- profile image -->
                     <div class="image">
-                        <img src="./img/avt.jpg" alt="">
+                        <img src="./img/anhthe.jpg" alt="">
                     </div>
                     <!-- profile title -->
                     <div class="title">Nguyễn Thế Sơn</div>
@@ -256,7 +256,7 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                                     <div class="text-box">
-                                        <p>Hi, I am Nguyen The Son. I'm a final year student at Industrial University of Ho Chi Minh City. My major in Information Technology. I have spent three year improving my skills in Information Technology.
+                                        <p>Hi, I am Nguyen The Son. I'm a fouth year student at Industrial University of Ho Chi Minh City. My major in Information Technology. I have spent three year improving my skills in Information Technology.
                                         </p>
                                     </div>
                                 </div>
@@ -305,21 +305,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-12 services-item">
-                                    <div class="icon-service">
-                                        <p>
-                                            <ion-icon name="code-slash"></ion-icon>
-                                        </p>
-                                    </div>
-                                    <div class="content-service">
-                                        <div class="content-service_header">
-                                            Web developer
-                                        </div>
-                                        <div class="content-sevice_body">
-                                            <p>Modern and mobile-ready website that will help you reach all of your marketing.</p>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                             </div>
                             <div class="clear"></div>
                         </div>
@@ -347,15 +333,15 @@
                                     <div class="resume-items ">
                                         <div class="resume-item border-line-h">
                                             <div class="date">2019 - Present</div>
-                                            <div class="name">Industrial University</div>
-                                            <div class="address">HCMC</div>
-                                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, incidunt?</p>
+                                            <div class="name">Industrial University Of HCMC</div>
+                                            <div class="address">Information Technology</div>
+                                            <p style="font-size: 13px;">GPA: 3.17/4</p>
                                         </div>
                                         <div class="resume-item">
                                             <div class="date">2021 - Present</div>
                                             <div class="name">Front-End developer</div>
                                             <div class="address">F8 - fullstack.edu.vn</div>
-                                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, incidunt?</p>
+                                            <p style="font-size: 13px;">This course helped me build a website interface analyze the website interface, make effects with animation .....After completing this course, I knew the basic process of building a website and was able to build a website myself</p>
                                         </div>
                                     </div>
 
@@ -373,9 +359,9 @@
                                     <div class="resume-items ">
                                         <div class="resume-item ">
                                             <div class="date">2019 - Present</div>
-                                            <div class="name">Industrial University</div>
-                                            <div class="address">HCMC</div>
-                                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, incidunt?</p>
+                                            <div class="name">E-commerce Project</div>
+                                            <div class="address">Individual</div>
+                                            <p style="font-size: 13px;">Through personal projects that help me improve my programming knowledge</p>
                                         </div>
 
                                     </div>
@@ -401,22 +387,38 @@
                                     </div>
                                     <ul class="list-coding">
                                         <li class="item-coding border-line-h">
-                                            <div class="name">HTML / CSS</div>
-                                            <div class="process">
+                                            <div class="name"> <i class='bx bxl-html5'></i> HTML</div>
+                                            <!-- <div class="process">
                                                 <div class="percentage" style="width:50%"></div>
-                                            </div>
+                                            </div> -->
                                         </li>
                                         <li class="item-coding border-line-h">
-                                            <div class="name">JAVASCRIPT </div>
-                                            <div class="process">
-                                                <div class="percentage" style="width:10%"></div>
-                                            </div>
+                                            <div class="name"> <i class='bx bxl-css3' ></i> CSS/ Bootstrap</div>
+                                            <!-- <div class="process">
+                                                <div class="percentage" style="width:50%"></div>
+                                            </div> -->
                                         </li>
                                         <li class="item-coding border-line-h">
-                                            <div class="name">JQUERY</div>
-                                            <div class="process">
+                                            <div class="name"> <i class='bx bxl-javascript' ></i> JAVASCRIPT </div>
+                                            <!-- <div class="process">
                                                 <div class="percentage" style="width:10%"></div>
-                                            </div>
+                                            </div> -->
+                                        </li>
+                                        <li class="item-coding border-line-h">
+                                            <div class="name"> <i class='bx bxl-jquery' ></i> JQUERY</div>
+                                            <!-- <div class="process">
+                                                <div class="percentage" style="width:10%"></div>
+                                            </div> -->
+                                        </li>
+                                        <li class="item-coding border-line-h">
+                                            <div class="name"> <i class='bx bxl-php' ></i> PHP</div>
+                                        </li>
+                                        <li class="item-coding border-line-h">
+                                            <div class="name"> <i class='bx bxl-nodejs' ></i>  Nodejs</div>
+                                        </li>
+
+                                        <li class="item-coding border-line-h">
+                                            <div class="name"> <i class='bx bxl-mongodb' ></i> MongoDB</div>
                                         </li>
 
                                     </ul>
@@ -439,6 +441,12 @@
                                             </div>
                                             <div class="name">Web Design</div>
                                         </li>
+                                        <li class="item-knowledge">
+                                            <div class="check-icon">
+                                                <ion-icon name="checkmark-sharp"></ion-icon>
+                                            </div>
+                                            <div class="name">Phone Interface</div>
+                                        </li>
                                     </ul>
 
                                 </div>
@@ -453,10 +461,10 @@
                                     </div>
                                     <ul class="list-coding">
                                         <li class="item-coding border-line-h">
-                                            <div class="name">English</div>
-                                            <div class="process">
+                                            <div class="name">English basic</div>
+                                            <!-- <div class="process">
                                                 <div class="percentage" style="width:20%"></div>
-                                            </div>
+                                            </div> -->
                                         </li>
 
 
@@ -529,7 +537,7 @@
                                                 <img src="./img/mucsicweb.jpg" alt="">
                                             </div>
                                             <div class="name">
-                                                Music Tempalte
+                                                Music Template
                                             </div>
                                             <ul>
                                                 <li>HTML</li>
@@ -554,6 +562,42 @@
                                                 <li>HTML</li>
                                                 <li>CSS</li>
                                                 <li>JS</li>
+                                            </ul>
+                                        </div>
+                                    </a>
+
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <a href="https://son-co.github.io/template_shop/" class="item">
+                                        <div class="item-content">
+                                            <div class="img">
+                                                <img src="./img/shop.png" alt="">
+                                            </div>
+                                            <div class="name">
+                                                Template Shop Clone
+                                            </div>
+                                            <ul>
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>JS</li>
+                                            </ul>
+                                        </div>
+                                    </a>
+
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <a href="https://fastt-food.000webhostapp.com/" class="item">
+                                        <div class="item-content">
+                                            <div class="img">
+                                                <img src="./img/fastfood.png" alt="">
+                                            </div>
+                                            <div class="name">
+                                                Fast Food
+                                            </div>
+                                            <ul>
+                                                <li>HTML</li>
+                                                <li>CSS</li>
+                                                <li>PHP</li>
                                             </ul>
                                         </div>
                                     </a>
