add project nodejs

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     </div>
 
                     <div class="lnks">
-                        <a href="" class="lnk">
+                        <a href="CVNguyenTheSon.pdf" class="lnk" download="NguyenTheSon">
                             <span>Download CV</span>
                         </a>
                         <a href="#contact-card" class="lnk">
@@ -264,7 +264,12 @@
                                     <div class="info-list">
                                         <ul class="row">
                                             <li class="col-lg-12 col-md-12 col-sm-12 col-12">
-                                                <strong>Age</strong> 21
+                                                <strong>Age</strong> <span id="tuoii"></span>
+                                                <script>
+                                                    var currentYear = new Date().getFullYear();
+                                                    document.getElementById('tuoii').innerHTML = currentYear -2001;
+                                                    
+                                                </script>
                                             </li>
                                             <li class="col-lg-12 col-md-12 col-sm-12 col-12">
                                                 <strong>Degree</strong> University
@@ -502,12 +507,29 @@
                                             <ul>
                                                 <li>HTML</li>
                                                 <li>CSS</li>
+                                                <li>Bootstrap</li>
                                                 <li>JS</li>
                                             </ul>
                                         </div>
                                     </a>
-
-
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <a href="https://cosmetic-6py7.onrender.com/" class="item">
+                                        <div class="item-content">
+                                            <div class="img">
+                                                <img src="./img/cosmetic.png" alt="">
+                                            </div>
+                                            <div class="name">
+                                                Website bán mỹ phẩm
+                                            </div>
+                                            <ul>
+                                                <li>HTML</li>
+                                                <li>CSS/Bootstrap/Reponsive</li>
+                                                <li>JS/Ajax</li>
+                                                <li>Nodejs/MongoDB</li>
+                                            </ul>
+                                        </div>
+                                    </a>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                                     <a href="https://son-co.github.io/dirtycoins_clone/indexx.html" class="item">
@@ -520,11 +542,32 @@
                                             </div>
                                             <ul>
                                                 <li>HTML</li>
-                                                <li>CSS</li>
+                                                <li>CSS/Boostrap</li>
                                                 <li>JS</li>
+                                                <li>Reponsive</li>
                                             </ul>
                                         </div>
                                     </a>
+
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                                    <a href="https://nodecourses.onrender.com/" class="item">
+                                        <div class="item-content">
+                                            <div class="img">
+                                                <img src="./img/academy.png" alt="">
+                                            </div>
+                                            <div class="name">
+                                                Website đăng ký khóa học
+                                            </div>
+                                            <ul>
+                                                <li>HTML</li>
+                                                <li>CSS/Bootstrap</li>
+                                                <li>JS/Ajax</li>
+                                                <li>Nodejs/MongoDB</li>
+                                            </ul>
+                                        </div>
+                                    </a>
+
 
                                 </div>
                                 <div class="clear"></div>
@@ -542,6 +585,7 @@
                                             <ul>
                                                 <li>HTML</li>
                                                 <li>CSS</li>
+                                                <li>Boostrap</li>
                                                 <li>JS</li>
                                             </ul>
                                         </div>
@@ -560,8 +604,9 @@
                                             </div>
                                             <ul>
                                                 <li>HTML</li>
-                                                <li>CSS</li>
+                                                <li>CSS/Bootstrap</li>
                                                 <li>JS</li>
+                                                <li>Reponsive</li>
                                             </ul>
                                         </div>
                                     </a>
@@ -580,6 +625,7 @@
                                                 <li>HTML</li>
                                                 <li>CSS</li>
                                                 <li>JS</li>
+                                                <li>Reponsive</li>
                                             </ul>
                                         </div>
                                     </a>
@@ -596,8 +642,9 @@
                                             </div>
                                             <ul>
                                                 <li>HTML</li>
-                                                <li>CSS</li>
+                                                <li>CSS/Reponsive</li>
                                                 <li>PHP</li>
+                                                <li>MySQL</li>
                                             </ul>
                                         </div>
                                     </a>
@@ -637,7 +684,12 @@
                                     <div class="info-list">
                                         <ul>
                                             <li>
-                                                <strong>Age</strong> 21
+                                                <strong>Age</strong> <span id="tuoi"></span>
+                                                <script>
+                                                    var currentYear = new Date().getFullYear();
+                                                    document.getElementById('tuoi').innerHTML = currentYear -2001;
+                                                    
+                                                </script>
                                             </li>
                                             <li>
                                                 <strong>Address</strong> Ho Chi Minh
