--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="slide" style="background-image: url(./img/bg.jpg);"></div>
                     <!-- profile image -->
                     <div class="image">
-                        <img src="./img/anhthe.jpg" alt="">
+                        <img src="./img/avt.png" alt="">
                     </div>
                     <!-- profile title -->
                     <div class="title">Nguyễn Thế Sơn</div>
@@ -209,7 +209,7 @@
                     </div>
                     <!-- profile social -->
                     <div class="social">
-                        <a href="">
+                        <a href="https://www.facebook.com/sont.thed">
                             <span>
                                 <ion-icon name="logo-facebook"></ion-icon>
                             </span>
@@ -227,13 +227,13 @@
                         <a href="">
                             <span><ion-icon name="logo-twitter"></ion-icon></span>
                         </a>
-                        <a href="">
+                        <a href="https://github.com/son-co">
                             <span><ion-icon name="logo-github"></ion-icon></span>
                         </a>
                     </div>
 
                     <div class="lnks">
-                        <a href="CVNguyenTheSon.pdf" class="lnk" download="NguyenTheSon">
+                        <a href="NguyenTheSonCV.pdf" class="lnk" download="NguyenTheSon">
                             <span>Download CV</span>
                         </a>
                         <a href="#contact-card" class="lnk">
@@ -340,7 +340,7 @@
                                             <div class="date">2019 - Present</div>
                                             <div class="name">Industrial University Of HCMC</div>
                                             <div class="address">Information Technology</div>
-                                            <p style="font-size: 13px;">GPA: 3.17/4</p>
+                                            <p style="font-size: 13px;">GPA: 3.22/4</p>
                                         </div>
                                         <div class="resume-item">
                                             <div class="date">2021 - Present</div>
