--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CV - Template">
     <meta name="keywords" content="portfolio, cv, template">
+    <!-- ----------------------- -->
+    <meta property="og:title" content="Portfolio - Nguyễn Thế Sơn" />
+    <meta property="og:description" content="Nguyễn Thế Sơn" />
+    <meta property="og:image" content="	https://son-co.github.io/ntson_portfolio/img/avt.png" />
+    <meta property="og:url" content="https://son-co.github.io/ntson_portfolio/" />
+    <!-- ----------------------- -->
     <title>Portfolio - Nguyễn Thế Sơn</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <!-- LINK CSS -->
@@ -767,6 +773,7 @@
 <!-- script -->
 <script src="./js/loader.js"></script>
 <script src="./js/main.js"></script>
+<script src="./js/mouse.js"></script>
 
 
 <!-- font ion icon -->
