--- a/index.html
+++ b/index.html
@@ -760,7 +760,8 @@
 
     </div>
     </div>
-    <!-- Messenger Plugin chat Code -->
+    <div class="fb-settings">
+            <!-- Messenger Plugin chat Code -->
     <div id="fb-root"></div>
 
     <!-- Your Plugin chat code -->
@@ -790,6 +791,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
+    </div>
 </body>
 <!-- emailjs -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
