--- a/index.html
+++ b/index.html
@@ -760,11 +760,11 @@
 
     </div>
     </div>
-    <div class="fb-settings">
-            <!-- Messenger Plugin chat Code -->
+    <!-- <div class="fb-settings">
+    //Messenger Plugin chat Code
     <div id="fb-root"></div>
 
-    <!-- Your Plugin chat code -->
+    //Your Plugin chat code
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
 
@@ -774,7 +774,7 @@
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
-    <!-- Your SDK code -->
+    //Your SDK code
     <script>
       window.fbAsyncInit = function() {
         FB.init({
@@ -791,7 +791,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-    </div>
+    </div> -->
 </body>
 <!-- emailjs -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
@@ -805,7 +805,7 @@
 <!-- script -->
 <script src="./js/loader.js"></script>
 <script src="./js/main.js"></script>
-<script src="./js/mouse.js"></script>
+<!-- <script src="./js/mouse.js"></script> -->
 
 
 <!-- font ion icon -->
